testdata/baselines/reference/compiler/packageDeduplicationDuplicateGlobals.errors.txt
/node_modules/.pnpm/foo@1.0.0+globals@2.0.0/node_modules/globals/index.d.ts(1,13): error TS2403: Subsequent variable declarations must have the same type.  Variable 'myGlobal' must be of type 'string', but here has type 'number'.


==== /src/index.ts (0 errors) ====
    import { useBar } from "bar";
    import { useBaz } from "baz";
    
    const barResult = useBar();
    const bazResult = useBaz();
    
    const x: string = myGlobal;
    
==== /node_modules/.pnpm/foo@1.0.0+globals@1.0.0/node_modules/foo/package.json (0 errors) ====
    { "name": "foo", "version": "1.0.0" }
    
==== /node_modules/.pnpm/foo@1.0.0+globals@1.0.0/node_modules/foo/index.d.ts (0 errors) ====
    import "globals";
    export declare function useFoo(): typeof myGlobal;
    
==== /node_modules/.pnpm/foo@1.0.0+globals@1.0.0/node_modules/globals/package.json (0 errors) ====
    { "name": "globals", "version": "1.0.0" }
    
==== /node_modules/.pnpm/foo@1.0.0+globals@1.0.0/node_modules/globals/index.d.ts (0 errors) ====
    declare var myGlobal: string;
    
==== /node_modules/.pnpm/foo@1.0.0+globals@2.0.0/node_modules/foo/package.json (0 errors) ====
    { "name": "foo", "version": "1.0.0" }
    
==== /node_modules/.pnpm/foo@1.0.0+globals@2.0.0/node_modules/foo/index.d.ts (0 errors) ====
    import "globals";
    export declare function useFoo(): typeof myGlobal;
    
==== /node_modules/.pnpm/foo@1.0.0+globals@2.0.0/node_modules/globals/package.json (0 errors) ====
    { "name": "globals", "version": "2.0.0" }
    
==== /node_modules/.pnpm/foo@1.0.0+globals@2.0.0/node_modules/globals/index.d.ts (1 errors) ====
    declare var myGlobal: number;
                ~~~~~~~~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'myGlobal' must be of type 'string', but here has type 'number'.
!!! related TS6203 /node_modules/.pnpm/foo@1.0.0+globals@1.0.0/node_modules/globals/index.d.ts:1:13: 'myGlobal' was also declared here.
    
==== /node_modules/.pnpm/bar@1.0.0/node_modules/bar/package.json (0 errors) ====
    { "name": "bar", "version": "1.0.0" }
    
==== /node_modules/.pnpm/bar@1.0.0/node_modules/bar/index.d.ts (0 errors) ====
    import { useFoo } from "foo";
    export declare function useBar(): ReturnType<typeof useFoo>;
    
==== /node_modules/.pnpm/baz@1.0.0/node_modules/baz/package.json (0 errors) ====
    { "name": "baz", "version": "1.0.0" }
    
==== /node_modules/.pnpm/baz@1.0.0/node_modules/baz/index.d.ts (0 errors) ====
    import { useFoo } from "foo";
    export declare function useBaz(): ReturnType<typeof useFoo>;
    
    
    
    